web/components/output.module.scss
.container {
  background-color: transparent;
  //border: solid 1px black;
  height: calc(100vh - 20px);
}

.treemap {
  background-color: transparent;
}

.item {
  user-select: none;
  cursor: pointer;
}

@keyframes zoomIn {
  from {
    opacity: 0;
    transform: scale(0.9);
  }
  to {
    opacity: 0.5;
    transform: scale(1);
  }
}

.animate {
  animation: zoomIn 350ms ease-out forwards;
  transform-origin: center center;
}

